--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{font-family: Lato;}blockquote{border-color: #e53712;}div[submit-success]{ba
     <div class="container">
         <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!---Formbuilder Form--->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="President"><input type="hidden" name="email" data-form-email="true" value="OGkVI+VD1FreCot599kemBgvdzu2Hm9fTkMf3O7HDq+DKLsPyEjj1QmAjtbci1U5gJ1RvYCwjYYB9kpprnWt+EEtwtppHhBUoCcSXie856FXTJuZtFhRTXle8wCu5Q/5">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="President"><input type="hidden" name="email" data-form-email="true" value="ngV7CqNaulz9awY2JRnwMkudasCFjhxUtCoIWIad2ycF6cS25gThoAu/PHhyTVhL8aouonpUuh1MPs4dwt12WGeQo/azendMjwUdrSeR8NrS/o/v5lq223JuxWLR6AZt">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Thanks for filling out the form!</template>
@@ -47,11 +47,11 @@ body{font-family: Lato;}blockquote{border-color: #e53712;}div[submit-success]{ba
 </div>
 <div class="dragArea mbr-row">
 <div data-for="" class="mbr-col-lg-12">
-<h4 class="mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style display-5">
+<h4 class="mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style display-5">
 </h4>
 </div>
 <div data-for="" class="mbr-col-lg-12">
-<h3 class="mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style display-5">Pick Your President</h3>
+<h3 class="mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style display-5">Pick Your President</h3>
 </div>
 <div data-for="form[data][0][1]" class="mbr-col-lg-12 field">
 <label for="form[data][0][1]-formbuilder-6" class="form-control-label mbr-fonts-style display-7">Select</label>
@@ -61,7 +61,7 @@ body{font-family: Lato;}blockquote{border-color: #e53712;}div[submit-success]{ba
 <option value="Donald Trump">Donald Trump</option>
 </select>
 </div>
-<div data-for="" class="mbr-col-lg-12"><button type="submit" class="btn btn-primary display-1">Submit</button></div>
+<div data-for="" class="mbr-col-lg-12"><button type="submit" class="btn btn-primary display-4">Submit Now</button></div>
 </div>
 </form><!---Formbuilder Form--->
 </div>
